Extend server administration and game availability